--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,8 +45,24 @@ img{
 
 </style>
 <body style="background-color: #A9A9A9;" >
-
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">ms_naturecalling</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="INDEXXX.HTML">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="INDEXX.HTML">Link Page</a>
+            </li>
+        </ul>
+    </div>
+</nav>
       <div>
+        
         <img src="SBP.jpg" alt="" >
         
         <img src="GH.jpg" alt=""  >
