--- a/INDEXXX.HTML
+++ b/INDEXXX.HTML
@@ -39,6 +39,22 @@ a:active {
       <title>ms_naturecalling/contact/</title>
    </head>
  <body style="background-color: #A9A9A9;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">ms_naturecalling</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="INDEXX.HTML">Link Page</a>
+            </li>
+        </ul>
+    </div>
+</nav>
      
      <img src="PAPA.png" alt="" height="200px">
      <h1>Manish Sethi</h1>
