--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img{
 </style>
 <body style="background-color: #A9A9A9;" >
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">ms_naturecalling</a>
+    <a class="navbar-brand" href="index.html">ms_naturecalling</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -58,9 +58,7 @@ img{
             <li class="nav-item">
                 <a class="nav-link" href="INDEXX.HTML">Link Page</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Events</a>
-            </li>
+          
         </ul>
     </div>
 </nav>
